// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`getTimeUntilDate should return formatted output for future date 1`] = `
"До \`16.04.2026\` осталось

\`0\` недель
\`1\` день
\`0\` часов
\`0\` минут
\`0\` секунд

\`0.14286\` недель
\`1\` день
\`24\` часа
\`1440\` минут
\`86400\` секунд"
`;

exports[`getTimeUntilDate should return formatted output for past date 1`] = `
"\`14.04.2026\` наступило

\`0\` недель
\`1\` день
\`0\` часов
\`0\` минут
\`0\` секунд

\`0.14286\` недель
\`1\` день
\`24\` часа
\`1440\` минут
\`86400\` секунд

назад"
`;

exports[`getTimeUntilDate should return formatted output with custom text 1`] = `
"До твоего дня рождения осталось

\`0\` недель
\`1\` день
\`0\` часов
\`0\` минут
\`0\` секунд

\`0.14286\` недель
\`1\` день
\`24\` часа
\`1440\` минут
\`86400\` секунд"
`;

exports[`getTimeUntilDate should auto-detect target year when not provided 1`] = `
"До \`16.04.2026\` осталось

\`0\` недель
\`1\` день
\`0\` часов
\`0\` минут
\`0\` секунд

\`0.14286\` недель
\`1\` день
\`24\` часа
\`1440\` минут
\`86400\` секунд"
`;

exports[`getTimeUntilDate should use next year when date is in past (auto-detect) 1`] = `
"До \`01.01.2027\` осталось

\`2\` недели
\`3\` дня
\`0\` часов
\`0\` минут
\`0\` секунд

\`2.428571\` недель
\`17\` дней
\`408\` часов
\`24480\` минут
\`1468800\` секунд"
`;

exports[`getTimeUntilDate should return formatted output for far future date 1`] = `
"До \`01.01.2027\` осталось

\`37\` недель
\`2\` дня
\`0\` часов
\`0\` минут
\`0\` секунд

\`37.285714\` недель
\`261\` день
\`6264\` часа
\`375840\` минут
\`22550400\` секунд"
`;

exports[`getTimeUntilDate should handle same day at midnight 1`] = `
"До \`15.04.2026\` осталось

\`0\` недель
\`0\` дней
\`0\` часов
\`0\` минут
\`0\` секунд

\`0\` недель
\`0\` дней
\`0\` часов
\`0\` минут
\`0\` секунд"
`;

exports[`getTimeUntilDate should handle afternoon time 14:30:45 1`] = `
"До \`16.04.2026\` осталось

\`0\` недель
\`0\` дней
\`9\` часов
\`29\` минут
\`15\` секунд

\`0.056473\` недель
\`0.39531\` дней
\`9.4875\` часов
\`569.25\` минут
\`34155\` секунд"
`;

exports[`getTimeUntilDate should handle late evening time 23:59:59 1`] = `
"До \`16.04.2026\` осталось

\`0\` недель
\`0\` дней
\`0\` часов
\`0\` минут
\`1\` секунда

\`0.000002\` недель
\`0.00001\` дней
\`0.0003\` часов
\`0.02\` минут
\`1\` секунда"
`;

exports[`getTimeUntilDate should handle early morning time 01:15:30 1`] = `
"\`15.04.2026\` наступило

\`0\` недель
\`0\` дней
\`1\` час
\`15\` минут
\`30\` секунд

\`0.007490\` недель
\`0.05243\` дней
\`1.258\` часов
\`75.50\` минут
\`4530\` секунд

назад"
`;

exports[`getTimeUntilDate should handle midday time for past date calculation 1`] = `
"\`14.04.2026\` наступило

\`0\` недель
\`1\` день
\`12\` часов
\`0\` минут
\`0\` секунд

\`0.214286\` недель
\`1.50000\` дней
\`36\` часов
\`2160\` минут
\`129600\` секунд

назад"
`;

exports[`getTimeUntilDate more than one week difference should handle 2 weeks ahead at midnight 1`] = `
"До \`29.04.2026\` осталось

\`2\` недели
\`0\` дней
\`0\` часов
\`0\` минут
\`0\` секунд

\`2\` недели
\`14\` дней
\`336\` часов
\`20160\` минут
\`1209600\` секунд"
`;

exports[`getTimeUntilDate more than one week difference should handle 2 weeks ahead at noon 1`] = `
"До \`29.04.2026\` осталось

\`1\` неделя
\`6\` дней
\`12\` часов
\`0\` минут
\`0\` секунд

\`1.928571\` недель
\`13.50000\` дней
\`324\` часа
\`19440\` минут
\`1166400\` секунд"
`;

exports[`getTimeUntilDate more than one week difference should handle 1 month ahead at midnight 1`] = `
"До \`15.05.2026\` осталось

\`4\` недели
\`2\` дня
\`0\` часов
\`0\` минут
\`0\` секунд

\`4.285714\` недель
\`30\` дней
\`720\` часов
\`43200\` минут
\`2592000\` секунд"
`;

exports[`getTimeUntilDate more than one week difference should handle 1 month ahead at afternoon 1`] = `
"До \`15.05.2026\` осталось

\`4\` недели
\`1\` день
\`5\` часов
\`30\` минут
\`0\` секунд

\`4.175595\` недель
\`29.22917\` дней
\`701.5000\` часов
\`42090\` минут
\`2525400\` секунд"
`;

exports[`getTimeUntilDate more than one week difference should handle 3 months ahead at midnight 1`] = `
"До \`15.07.2026\` осталось

\`13\` недель
\`0\` дней
\`0\` часов
\`0\` минут
\`0\` секунд

\`13\` недель
\`91\` день
\`2184\` часа
\`131040\` минут
\`7862400\` секунд"
`;

exports[`getTimeUntilDate more than one week difference should handle 3 months ahead at evening 1`] = `
"До \`15.07.2026\` осталось

\`12\` недель
\`6\` дней
\`2\` часа
\`14\` минут
\`30\` секунд

\`12.87049\` недель
\`90.09340\` дней
\`2162.242\` часов
\`129734.5\` минут
\`7784070\` секунд"
`;

exports[`getTimeUntilDate more than one week difference should handle 1 year ahead at midnight 1`] = `
"До \`15.04.2027\` осталось

\`52\` недели
\`1\` день
\`0\` часов
\`0\` минут
\`0\` секунд

\`52.142857\` недель
\`365\` дней
\`8760\` часов
\`525600\` минут
\`31536000\` секунд"
`;

exports[`getTimeUntilDate more than one week difference should handle 1 year ahead at morning 1`] = `
"До \`15.04.2027\` осталось

\`52\` недели
\`0\` дней
\`16\` часов
\`0\` минут
\`0\` секунд

\`52.095238\` недель
\`364.66667\` дней
\`8752\` часа
\`525120\` минут
\`31507200\` секунд"
`;
